# button-panel

./: .gitignore  Cargo.toml
button-protocol/: Cargo.toml
button-protocol/src/: lib.rs
control/: Cargo.toml  button_panel.service  button_panel_dev.service  deploy.sh
control/examples/: press_bottom_left.rs
control/src/: lib.rs  lightcontrol.rs  main.rs  mpd.rs  panel.rs  tcp.rs
control/src/audiocontrol/: db.rs  db2.rs  mod.rs  mpdclient.rs  mpdinterface.rs
control/src/mpd/: db.rs  mod.rs
control/tests/: mockpanel.rs
panel/: Cargo.toml  README.md  dev.md
panel/.cargo/: config.toml
panel/src/: main.rs  usb.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
scripts/: setup_toolchain.sh
