[package]
name = "control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
color-eyre = "0.6.3"
sudo = "0.6"
mpdrs = { git = "https://github.com/SimonPersson/mpdrs", rev = "785e54" }
sled = "0.34"
tokio-serial = "5.4.3"
tokio = { version = "^1.8", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util", "net"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
futures = { workspace = true }
async-trait = "0.1.56"

tracing = { version = "0.1" }
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

reqwest = { version = "0.11", features = ["rustls-tls"], default-features = false }

dbstruct = "0.1"
serde = "1.0"

data-server = { workspace = true }
ha-protocol = { workspace = true }

button-protocol = { workspace = true }
