[package]
authors = ["Eva van houten, David Kleingeld"]
edition = "2021"
name = "panel"
version = "0.1.0"
resolver = "2"

[dependencies]
embassy = { rev="0ed4e57", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "time-tick-32768hz"] }

embassy-stm32 = { rev="0ed4e57", git = "https://github.com/embassy-rs/embassy", features = ["nightly", "unstable-traits", "defmt", "stm32f401cc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }

defmt = "0.3"
defmt-rtt = "0.3"

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"

usb-device = "0.2"
usbd-serial = "0.1.1"

protocol = { git = "https://github.com/evavh/button-panel" }
