[package]
authors = ["Eva van houten, David Kleingeld"]
edition = "2021"
name = "panel"
version = "0.1.0"
resolver = "2"

[dependencies]
# embassy = { rev="0ed4e57", git = "https://github.com/embassy-rs/embassy", features = ["defmt", "unstable-traits", "time-tick-32768hz"] }
# embassy = { features = ["defmt", "unstable-traits", "time-tick-32768hz"] }

embassy-executor = { version = "0.6.3", features = ["arch-cortex-m", "executor-interrupt"] }
embassy-sync = "0.3.0"
embassy-time = "0.3.2"
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f401cc", "unstable-pac", "memory-x", "time-driver-any", "exti"]  }

defmt = { workspace = true }
defmt-rtt = { workspace = true }

cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-io = "0.3.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { workspace = true }
heapless = { version = "0.7.5", default-features = false }
nb = "1.0.0"

usb-device = "0.2"
usbd-serial = "0.1.1"

button-protocol = { workspace = true }
